test/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
out/third_party/testsuite/func.wast:303: assert_invalid passed:
  000001a: error: invalid function signature index: 2
out/third_party/testsuite/func.wast:387: assert_malformed passed:
  out/third_party/testsuite/func/func.4.wast:1:76: error: unexpected token "param", expected an instr.
  ... i32) (result i32)))(func (type $sig) (result i32) (param i32) (i32.const 0))
                                                         ^^^^^
out/third_party/testsuite/func.wast:394: assert_malformed passed:
  out/third_party/testsuite/func/func.5.wast:1:63: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (param i32) (type $sig) (result i32) (i32.const 0))
                                            ^^^^
out/third_party/testsuite/func.wast:401: assert_malformed passed:
  out/third_party/testsuite/func/func.6.wast:1:76: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (param i32) (result i32) (type $sig) (i32.const 0))
                                                         ^^^^
out/third_party/testsuite/func.wast:408: assert_malformed passed:
  out/third_party/testsuite/func/func.7.wast:1:64: error: unexpected token "type", expected an instr.
  ... i32) (result i32)))(func (result i32) (type $sig) (param i32) (i32.const 0))
                                             ^^^^
out/third_party/testsuite/func.wast:415: assert_malformed passed:
  out/third_party/testsuite/func/func.8.wast:1:64: error: unexpected token "param", expected an instr.
  ... i32) (result i32)))(func (result i32) (param i32) (type $sig) (i32.const 0))
                                             ^^^^^
  out/third_party/testsuite/func/func.8.wast:1:85: error: unexpected token ), expected (.
  ... i32) (result i32)))(func (result i32) (param i32) (type $sig) (i32.const 0))
                                                                  ^
out/third_party/testsuite/func.wast:422: assert_malformed passed:
  out/third_party/testsuite/func/func.9.wast:1:21: error: unexpected token "param", expected an instr.
  (func (result i32) (param i32) (i32.const 0))
                      ^^^^^
out/third_party/testsuite/func.wast:429: assert_malformed passed:
  out/third_party/testsuite/func/func.10.wast:1:20: error: expected 0 results, got 1
  (type $sig (func))(func (type $sig) (result i32) (i32.const 0))
                     ^^^^
out/third_party/testsuite/func.wast:436: assert_malformed passed:
  out/third_party/testsuite/func/func.11.wast:1:45: error: expected 1 arguments, got 0
  ...g (func (param i32) (result i32)))(func (type $sig) (result i32) (i32.cons...
                                        ^^^^
out/third_party/testsuite/func.wast:443: assert_malformed passed:
  out/third_party/testsuite/func/func.12.wast:1:45: error: expected 1 results, got 0
  ...g (func (param i32) (result i32)))(func (type $sig) (param i32) (i32.const...
                                        ^^^^
out/third_party/testsuite/func.wast:450: assert_malformed passed:
  out/third_party/testsuite/func/func.13.wast:1:49: error: expected 2 arguments, got 1
  ...unc (param i32 i32) (result i32)))(func (type $sig) (param i32) (result i3...
                                        ^^^^
out/third_party/testsuite/func.wast:461: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001d: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:465: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001c: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:469: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001e: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:477: assert_invalid passed:
  error: type mismatch in implicit return, expected i64 but got i32.
  000001c: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:481: assert_invalid passed:
  error: type mismatch in i32.eqz, expected i32 but got f32.
  000001b: error: OnConvertExpr callback failed
out/third_party/testsuite/func.wast:485: assert_invalid passed:
  error: type mismatch in f64.neg, expected f64 but got i64.
  000001c: error: OnUnaryExpr callback failed
out/third_party/testsuite/func.wast:493: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:497: assert_invalid passed:
  000000e: error: result count must be 0 or 1
out/third_party/testsuite/func.wast:506: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:510: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:514: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:518: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  0000019: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:523: assert_invalid passed:
  error: type stack size too small at implicit return. got 0, expected at least 1
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:529: assert_invalid passed:
  error: type stack at end of function is 1, expected 0
  000001a: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:535: assert_invalid passed:
  error: type mismatch in implicit return, expected i32 but got f32.
  000001e: error: EndFunctionBody callback failed
out/third_party/testsuite/func.wast:542: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:548: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:554: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:561: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  0000019: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:567: assert_invalid passed:
  error: type stack size too small at return. got 0, expected at least 1
  000001a: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:573: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:579: assert_invalid passed:
  error: type mismatch in return, expected i32 but got i64.
  000001b: error: OnReturnExpr callback failed
out/third_party/testsuite/func.wast:586: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:592: assert_invalid passed:
  error: type mismatch in br, expected i32 but got f32.
  000001f: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:598: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001a: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:604: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:610: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:617: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001c: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:623: assert_invalid passed:
  error: type stack size too small at br. got 0, expected at least 1
  000001d: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:629: assert_invalid passed:
  error: type mismatch in br, expected i32 but got i64.
  000001e: error: OnBrExpr callback failed
out/third_party/testsuite/func.wast:639: assert_malformed passed:
  out/third_party/testsuite/func/func.44.wast:1:14: error: unexpected token "local", expected an instr.
  (func (nop) (local i32))
               ^^^^^
out/third_party/testsuite/func.wast:643: assert_malformed passed:
  out/third_party/testsuite/func/func.45.wast:1:14: error: unexpected token "param", expected an instr.
  (func (nop) (param i32))
               ^^^^^
out/third_party/testsuite/func.wast:647: assert_malformed passed:
  out/third_party/testsuite/func/func.46.wast:1:14: error: unexpected token "result", expected an instr.
  (func (nop) (result i32))
               ^^^^^^
out/third_party/testsuite/func.wast:651: assert_malformed passed:
  out/third_party/testsuite/func/func.47.wast:1:20: error: unexpected token "param", expected an instr.
  (func (local i32) (param i32))
                     ^^^^^
out/third_party/testsuite/func.wast:655: assert_malformed passed:
  out/third_party/testsuite/func/func.48.wast:1:20: error: unexpected token "result", expected an instr.
  (func (local i32) (result i32) (get_local 0))
                     ^^^^^^
out/third_party/testsuite/func.wast:659: assert_malformed passed:
  out/third_party/testsuite/func/func.49.wast:1:21: error: unexpected token "param", expected an instr.
  (func (result i32) (param i32) (get_local 0))
                      ^^^^^
120/120 tests passed.
;;; STDOUT ;;)
